# LapTimeSimulator_CopaTruck

./: .gitignore  CLAUDE.md  README.md  generate_silverstone.py  pyproject.toml  requirements.txt  run_porsche_e2e.py  teste_modulos.py
data/: Silverstone.hdf5  vehicle_params.py
outputs/porsche_e2e/: porsche_991_1_default.csv  porsche_991_1_high_downforce.csv  porsche_991_2_default.csv  porsche_991_2_high_downforce.csv  porsche_992_1_default.csv  porsche_992_1_high_downforce.csv
results/: lap_interlagos_20251115_170905.csv
src/: __init__.py  controle.py  exportacao.py  interface.py  modelo_dinamico.py  simulacao.py  simulation.py  tire_model.py  utils.py
src/lap_time_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/optimization/: constrains.py  optimization.py
src/results/: lap_interlagos_20251202_102319.csv  lap_interlagos_20260309_105424.csv  lap_interlagos_20260309_111708.csv  lap_interlagos_20260309_135008.csv  lap_interlagos_20260309_143552.csv  lap_interlagos_20260309_152719.csv  lap_interlagos_20260309_153508.csv  lap_interlagos_20260309_160014.csv  lap_interlagos_20260309_160945.csv  lap_interlagos_20260309_161759.csv  lap_interlagos_20260310_140737.csv
src/simulation/: __init__.py  driver_model.py  lap_time_solver.py  simulation_modes.py  validation.py
src/tracks/: __init__.py  base.py  circuit.py  download_br_tracks.py  download_osm.py  generate_br_tracks.py  generator.py  hdf5.py  osm.py  tumftm.py  visualize.py
src/vehicle/: __init__.py  aerodynamics.py  brakes.py  (+6 more)
tracks/: interlagos.hdf5
(+7 files in other folders)
