[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lap_time_simulator"
version = "0.1.0"
description = "Lap time simulator (Copa Truck) - CLI and Streamlit UI"
authors = [ { name = "vitor" } ]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "pandas>=2.0.0",
  "h5py>=3.9.0",
  "matplotlib>=3.7.0",
  "plotly>=5.0.0",
  "streamlit>=1.28.0"
]

[project.scripts]
lap-sim = "lap_time_simulator.cli:main"
